--- a/2024_0729Auction/src/main/webapp/resources/css/items_list.css
+++ b/2024_0729Auction/src/main/webapp/resources/css/items_list.css
@@ -13,6 +13,13 @@
 body {
     background-color: #1F2128;
 }
+
+#modalBody {
+	
+	width: 1400px;
+	height: 1000px;
+}
+
 .search {
     margin-left: 300px;
     
